Prévenir le pull-down-to-refresh. Tentative 1

--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,9 @@ textarea {
 
 body { 
 	margin: 0; 
+	
+	/* Disables pull-to-refresh but allows overscroll glow effects. */
+	overscroll-behavior-y: contain;
 }
 			
 /*canvas { 
