--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,8 @@ textarea {
 
 body { 
 	margin: 0; 
-	
+	height: auto;
+	min-height: 100%;
 	/* Disables pull-to-refresh but allows overscroll glow effects. */
 	overscroll-behavior-y: contain;
 }
