--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,21 @@ h1 {
 	
 }
 
+/* Fenêtres modales FULLSCREEN  */
+
+.modal-full {
+    min-height: 100%;
+    min-width: 100%;
+    margin: 0;
+}
+
+.modal-content {
+    
+    min-height: 100vh;
+
+}
+
+
 
 
 
