--- a/css/main.css
+++ b/css/main.css
@@ -110,10 +110,18 @@ body {
 
 
 #couincouin {
-	
+    
+    display: flex;
+    flex-direction: column;
 	height: 100vh;
+    margin: 0 auto;
 	width: 100vw;
 	
+}
+
+canvas {
+    
+    margin: 0 auto;
 }
 
 
@@ -125,7 +133,7 @@ div.position-fixed {
 
 h1 {
 	
-	top: 20%;
+	top: 10%;
 	width: 100%;
 	
 }
